--- a/Главная.css
+++ b/Главная.css
@@ -1,3 +1,7 @@
+body, html {
+  overflow-x: hidden;
+}
+
  .u-section-1 {
   background-image: linear-gradient(0deg, rgba(41,46,51,0.65), rgba(41,46,51,0.65)), url("images/header_bg.png");
   background-position: 50% 50%;
